Package-Edit-Name

--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "api_booking",
+  "name": "booking_app",
   "version": "1.0.0",
-  "description": "Api para app de booking",
+  "description": "App de booking",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
